Implement Creds_simplified object
