# openapi_server/models/__init__.py
@@ -1,7 +1,7 @@
 # coding: utf-8
 
 # import models into model package
-from openapi_server.models.creds_user_pass import CredsUserPass
+from openapi_server.models.creds_simplified import CredsSimplified
 from openapi_server.models.inline_object import InlineObject
 from openapi_server.models.inline_response200 import InlineResponse200
 from openapi_server.models.inline_response2001 import InlineResponse2001
